--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "dependencies": {
       "express": "^4.17.3",
       "pg": "^8.7.3"
+    },
+    "engines": {
+        "node": ">=16 <17"
     }
   }
