--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
-      "express": "^4.17.3",
-      "pg": "^8.7.3"
+        "express": "^4.17.3",
+        "pg": "^8.7.3",
+        "query-string": "^7.1.1",
+        "ws": "^8.5.0"
     },
     "engines": {
         "node": ">=16 <17"
     }
-  }
+}
