--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "express": "^4.17.3",
         "pg": "^8.7.3",
         "query-string": "^7.1.1",
+        "socket.io": "^4.4.1",
         "ws": "^8.5.0"
     },
     "engines": {
